# datatalksclub.github.io

./: .gitignore  CNAME  Cargo.toml  Gemfile  IMPLEMENTATION_SUMMARY.md  MAILCHIMP_CODE_BLOCK_SETUP.md  MAILCHIMP_NEWSLETTER_GUIDE.md  Makefile  PRODUCTION_READINESS.md  Pipfile  README.md  SSG_README.md  _config.yml  articles.md  authors.md  benchmark.sh  books.md  courses.md  events.md  header-demo.html  header-only.html  index.md  mailchimp-code-block-demo.html  mailchimp-code-block.html  newsletter-demo.html  newsletter-mailchimp.html  newsletter-template-email-safe.html  newsletter-template.html  package-lock.json  people.md  podcast-errors-found.md  podcast.md  pyproject.toml  robots.txt  site.webmanifest  sitemap.xml  slack.md  support.md  tools.md
.bundle/: config
_authors/: alexey.md  nishant.md
_books/: 20201214-ml-bookcamp.md  20210111-reinforcement-learning.md  20210118-deep-learning-structured-data.md  20210125-deep-learning-structured-data.md  20210125-mastering-ml-algorithms-2ed.md  20210201-data-teams.md  20210208-ml-design-patterns.md  20210215-math-for-programmers.md  20210222-ml-algotrading-2ed.md  20210301-ml-engineering.md  20210308-designing-data-intensive-applications.md  20210315-database-internals.md  20210322-street-coder.md  20210329-learning-tensorflow-js.md  20210405-the-practitioners-guide-to-graph-data.md  20210412-ai-and-machine-learning-for-coders.md  20210419-transformers-for-natural-language-processing.md  20210426-tiny-python-projects.md  20210503-machine-learning-using-tensorflow-cookbook.md  20210510-the-coding-career-handbook.md  (+86 more)
(+1471 files in other folders)
