[project]
name = "datatalksclub-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.9",
    "pillow>=12.0.0",
    "python-docx>=1.2.0",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "unidecode>=1.4.0",
]
